--- a/skillmesh-cognexia/requirements.txt
+++ b/skillmesh-cognexia/requirements.txt
@@ -1,3 +1,8 @@
-flask
-pandas
-openpyxl
+Flask==3.0.0
+gspread==6.1.0
+oauth2client==4.1.3
+google-auth==2.29.0
+google-auth-oauthlib==1.2.0
+google-auth-httplib2==0.2.0
+pandas==2.2.2
+python-dotenv==1.0.1
